# intake-agentic-triage

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Presentation.html  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: adversarial-tester.md
.claude/commands/: bootstrap-status.md  eval-adv.md  eval.md
.claude/hooks/: pretooluse_writes.py
.claude/skills/adr-writer/: SKILL.md
agents/: bedrock_client.py  classifier.py  contracts.py  coordinator.py  risk_assessor.py
docs/: worklog.md
docs/adr/: 000-template.md  001-eval-primitives.md  002-domain-it-helpdesk.md  003-topology.md  004-safety-and-escalation.md  README.md
evals/: scorecard.py
evals/adversarial/: cases.json
evals/dataset/: cases.json
evals/graders/: llm_judge.py  rule_based.py  trajectory.py
evals/runs/: 20260428T125719Z.json  20260428T131745Z.json
tools/: action_tools.py  classifier_tools.py  risk_tools.py
